--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,8 @@
 <script src="lib/angular-animate/angular-animate.js"></script>
 <script src="lib/angular-sanitize/angular-sanitize.js"></script>
 <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
+<script src="lib/angular-gravatar/build/md5.js"></script>
+<script src="lib/angular-gravatar/build/angular-gravatar.js"></script>
 <script src="lib/collide/collide.js"></script>
 <script src="lib/ngCordova/dist/ng-cordova.js"></script>
 <script src="lib/angular-resource/angular-resource.js"></script>
