Being hooking this stuff up to the backend

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>CarCloud</title>
     <!-- build:css(.tmp) styles/main.css -->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="lib/ionicons/css/ionicons.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <!-- endbuild -->
     <script src="cordova.js"></script>
