--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,14 @@
 <ion-nav-view></ion-nav-view>
 
 <!-- build:js scripts/scripts.js -->
+<script src="lib/jquery/dist/jquery.js"></script>
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular-animate/angular-animate.js"></script>
-<script src="lib/angular-animate/angular-animate.js"></script>
 <script src="lib/angular-sanitize/angular-sanitize.js"></script>
+<script src="lib/angular-hateoas/src/angular-hateoas.js"></script>
+<script src="lib/angular-local-storage/dist/angular-local-storage.js"></script>
+<script src="lib/angular-http-auth/src/http-auth-interceptor.js"></script>
+<script src="lib/angular-base64/angular-base64.js"></script>
 <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="lib/angular-gravatar/build/md5.js"></script>
 <script src="lib/angular-gravatar/build/angular-gravatar.js"></script>
@@ -31,11 +35,9 @@
 <script src="lib/ionic/js/ionic-angular.js"></script>
 
 <script src="js/app.js"></script>
-<script src="js/utils.js"></script>
-<script src="js/services.js"></script>
+<script src="js/factories.js"></script>
 <script src="js/constants.js"></script>
 <script src="js/controllers.js"></script>
-<script src="js/http-auth-interceptor.js"></script>
 <!-- endbuild -->
 </body>
 </html>
