--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <title>CarCloud</title>
     <!-- build:css(.tmp) styles/main.css -->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="lib/chosen/chosen.css" rel="stylesheet">
+    <link href="lib/angular-chosen-localytics/chosen-spinner.css" rel="stylesheet">
     <link href="lib/ionicons/css/ionicons.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <!-- endbuild -->
@@ -18,6 +20,7 @@
 
 <!-- build:js scripts/scripts.js -->
 <script src="lib/jquery/dist/jquery.js"></script>
+<script src="lib/chosen/chosen.jquery.js"></script>
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular-animate/angular-animate.js"></script>
 <script src="lib/angular-sanitize/angular-sanitize.js"></script>
@@ -28,6 +31,7 @@
 <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="lib/angular-gravatar/build/md5.js"></script>
 <script src="lib/angular-gravatar/build/angular-gravatar.js"></script>
+<script src="lib/angular-chosen-localytics/chosen.js"></script>
 <script src="lib/collide/collide.js"></script>
 <script src="lib/ngCordova/dist/ng-cordova.js"></script>
 <script src="lib/angular-resource/angular-resource.js"></script>
