--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link href="lib/selectize/dist/css/selectize.default.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <!-- endbuild -->
-    <script src="//maps.google.com/maps/api/js"></script>
+    <script src="http//maps.google.com/maps/api/js"></script>
     <script src="cordova.js"></script>
 </head>
 
