--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
 <ion-nav-view></ion-nav-view>
 
-<!-- build:js scripts/scripts.js -->
+<!-- build:js scdripts/scripts.js -->
 <script src="lib/jquery/dist/jquery.js"></script>
 <script src="lib/angular/angular.js"></script>
 <script src="lib/angular-animate/angular-animate.js"></script>
