--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
 <body ng-app="carcloudApp">
 
-<ion-nav-view></ion-nav-view>
+<ion-nav-view animation="no-animation" class="no-animation"></ion-nav-view>
 
 <!-- build:js scripts/scripts.js -->
 <script src="lib/jquery/dist/jquery.js"></script>
