--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,6 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="lib/ionicons/css/ionicons.css" rel="stylesheet">
-    <link href="lib/angular-ui-select/dist/select.css" rel="stylesheet">
-    <link href="lib/selectize/dist/css/selectize.default.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <!-- endbuild -->
 
@@ -31,13 +29,13 @@
 <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="lib/angular-gravatar/build/md5.js"></script>
 <script src="lib/angular-gravatar/build/angular-gravatar.js"></script>
-<script src="lib/angular-ui-select/dist/select.js"></script>
 <script src="lib/collide/collide.js"></script>
 <script src="lib/ngCordova/dist/ng-cordova.js"></script>
 <script src="lib/angular-resource/angular-resource.js"></script>
 <script src="lib/ionic/js/ionic.js"></script>
 <script src="lib/ionic/js/ionic-angular.js"></script>
-
+<script src="lib/angular-bootstrap-typeahead/ui-bootstrap-custom-0.6.0.js"></script>
+<script src="lib/angular-bootstrap-typeahead/ui-bootstrap-custom-tpls-0.6.0.js"></script>
 <script src="js/app.js"></script>
 <script src="js/factories.js"></script>
 <script src="js/constants.js"></script>
